# rez-install

./: README.md  rez.env
alembic/1.7.1/: CMakeLists.txt  package.py
blosc/1.17.0/: CMakeLists.txt  package.py
boost/1.61.0/: CMakeLists.txt  package.py
boost/1.70.0/: CMakeLists.txt  package.py
clang/7.0.0/: build.sh  clang-build-vars.sh  package.py
cmake/3.12.4/: CMakeLists.txt  package.py
cmake/3.14.6/: CMakeLists.txt  package.py
draco/1.3.6/: CMakeLists.txt  package.py
expat/2.2.5/: CMakeLists.txt  package.py
expat/2.2.8/: CMakeLists.txt  package.py
ffmpeg/4.2.0/: build.sh  clean.sh  package.py  setup.sh
fmt/6.1.2/: CMakeLists.txt  package.py
glew/2.0.0/: CMakeLists.txt  package.py
glew/2.0.0/cmake/: glew.cmake
hdf5/1.10.0/: CMakeLists.txt  package.py
ilmbase/2.2.0/: CMakeLists.txt  package.py
ilmbase/2.3.0/: CMakeLists.txt  build.sh  configure.sh  install.sh  package.py
jemalloc/4.5.0/: CMakeLists.txt  package.py
jpeg/1.5.3/: CMakeLists.txt  package.py
jpeg/1.5.3/cmake/: FindJPEG.cmake
jsonc/0.13/: CMakeLists.txt  package.py
lcms/2.12/: CMakeLists.txt  package.py  update.sh
leptonica/1.73.0/: build.sh  package.py
leptonica/1.79.0/: build.sh  package.py
materialx/1.36.0/: CMakeLists.txt  package.py
materialx/1.36.3/: CMakeLists.txt  package.py
materialx/1.37.1/: CMakeLists.txt  package.py
ninja/1.8.2/: build.sh  package.py
ocio/1.0.9/: CMakeLists.txt  package.py
ocio/1.1.0/: CMakeLists.txt  package.py
ocio/2.0.0/: CMakeLists.txt  package.py
oiio/1.7.14/: CMakeLists.txt  package.py
oiio/1.7.14/cmake/: oiio.cmake
oiio/1.8.9/: CMakeLists.txt  package.py
oiio/2.1.16/: CMakeLists.txt  package.py
oiio/2.1.16/cmake/: oiio.cmake
oiio/2.1.18.1/: CMakeLists.txt  README.md  package.py
openexr/2.2.0/: CMakeLists.txt  link_files.sh  package.py
openexr/2.3.0/: CMakeLists.txt  package.py
openexr/2.4.2/: CMakeLists.txt  package.py
opensubdiv/3.1.1/: CMakeLists.txt  package.py
opensubdiv/3.4.3/: CMakeLists.txt  package.py
openvdb/6.1.0/: CMakeLists.txt  package.py
otio/0.12.0/: build.sh  package.py
otio/0.13.0/: build.sh  package.py
otio/0.13.0.rc1/: build.sh  package.py
otio/0.13.3/: README.md  build.sh  package.py
otio/0.14.0/: README.md  build.sh  package.py
png/1.6.29/: CMakeLists.txt  package.py
png/1.6.29/cmake/: png.cmake
pyalembic/1.7.1/: CMakeLists.txt  package.py
pybind11/2.4.3/: CMakeLists.txt  package.py
pybind11/2.6.1/: CMakeLists.txt  package.py
pyilmbase/2.2.0/: CMakeLists.txt  package.py
pyqt5/5.12.2/: CMakeLists.txt  package.py
pyside2/5.12.6/: README.md  build.sh  package.py
pystring/1.1.3/: CMakeLists.txt  package.py  update.sh
python/2.7.16/: CMakeLists.txt  README.md  package.py
python/3.7.7/: CMakeLists.txt  README.md  package.py
qt/5.12.6/: CMakeLists.txt  package.py
qt/5.15.2/: CMakeLists.txt  package.py
rapidjson/1.1.0/: CMakeLists.txt  package.py
robin_map/0.6.2/: CMakeLists.txt  package.py
seexpr/3.0.1/: CMakeLists.txt  package.py
tbb/2017_U6/: CMakeLists.txt  copy_files.sh  package.py
tbb/2017_U6/cmake/: tbb.cmake
tbb/4.4.6/: CMakeLists.txt  package.py
tbb/4.4.6/cmake/: tbb.cmake
tesseract/3.4.1/: build.sh  package.py
tesseract/4.1.1/: build.sh  package.py
tiff/4.0.7/: CMakeLists.txt  package.py
tiff/4.1.0/: CMakeLists.txt  package.py
usd_core/19.11/: CMakeLists.txt  package.py
usd_core/20.02/: CMakeLists.txt  package.py
usd_core/20.02/update/cmake/default/: gccclangshareddefaults.patch
usd_core/20.05/: CMakeLists.txt  package.py
usd_core/20.05-dev/: CMakeLists.txt  package.py
usd_core/20.05/update/pxr/usdImaging/usdAppUtils/: frameRecorder.cpp
usd_core/20.08/: CMakeLists.txt  package.py
usd_houdini/17.5.229/: CMakeLists.txt  package.py
usd_houdini/17.5.229/update/: CMakeLists.txt  OBJ_usdcamera.h
usd_houdini/17.5.460/: package.py  source_update.sh
usd_houdini/17.5.460/update/: OBJ_usdcamera.cpp
usd_katana/19.11/: CMakeLists.txt  README.md  package.py
usd_katana/19.11.3/: CMakeLists.txt  copy_include.sh  package.py
usd_katana/19.11.3/fnusd_update/lib/usdKatana/: readPointInstancer.cpp  readPrim.cpp  utils.cpp  utils.h
usd_katana/19.11.3/fnusd_update/plugin/pxrUsdIn/: pxrUsdIn.cpp
usd_katana/19.11/fnusd_update/cmake/macros/: SetupInterfaces.cmake
usd_katana/19.11/fnusd_update/lib/usdKatana/: readPointInstancer.cpp  readPrim.cpp  utils.cpp  utils.h
usd_katana/19.11/fnusd_update/plugin/pxrUsdIn/: pxrUsdIn.cpp
usd_katana/20.02/: CMakeLists.txt  package.py
usd_katana/20.02/update/pxr/usdImaging/usdAppUtils/: frameRecorder.cpp  frameRecorder.cpp.patch
usd_mari/19.11/: build.sh  package.py
usd_maya/0.1.0/: CMakeLists.txt  package.py
usd_maya/0.1.1/: CMakeLists.txt  package.py
usd_maya/0.2.0/: CMakeLists.txt  package.py
usd_maya/0.4.0/: CMakeLists.txt  package.py
usd_maya/19.11/: CMakeLists.txt  package.py
usd_nuke/20.05-dev/: CMakeLists.txt  package.py
usdmanager/0.10.0/: README.md  build.sh  package.py
usdmanager/0.10.0/share/desktop/: usdmanager.desktop
usdmanager/0.11.0/: README.md  build.sh  package.py
yaml/0.6.3/: CMakeLists.txt  package.py
zlib/1.2.11/: CMakeLists.txt  package.py
zlib/1.2.11/cmake/: zlib.cmake
