CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

include(RezBuild)
include(ExternalProject)

if(${REZ_BUILD_INSTALL})
    set(install_cmd make install ${make_args})
else()
    set(install_cmd "")
endif()

set(CMAKE_ARGS
    -DCMAKE_BUILD_TYPE=Release
    -DBUILD_MAYAUSD_LIBRARY=ON
    -DBUILD_ADSK_PLUGIN=ON
    -DBUILD_AL_PLUGIN=ON
    -DBUILD_HDMAYA=ON
    -DBUILD_RFM_TRANSLATORS=ON
    -DBUILD_TESTS=OFF
    -DBUILD_STRICT_MODE=ON
    -DCMAKE_WANT_UFE_BUILD=ON
    -DMAYA_LOCATION=$ENV{MAYA_LOCATION}
    -DPXR_USD_LOCATION=$ENV{USD_ROOT}
    -DMAYA_DEVKIT_LOCATION=$ENV{MAYA_LOCATION}/devkit
    -DMAYAUSD_DEFINE_BOOST_DEBUG_PYTHON_FLAG=ON
    -DSKIP_USDMAYA_TESTS=ON
    -DQT_LOCATION=$ENV{REZT_QT_ROOT}
    -DCMAKE_UFE_V2_FEATURES_AVAILABLE=OFF
)

ExternalProject_add(
    usd_maya
    URL "$ENV{SOURCEROOT}/usd_maya/maya-usd-0.4.0.tar.gz"
    PREFIX usd_maya
    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} ${CMAKE_ARGS}
    INSTALL_COMMAND "${install_cmd}"
)

install(
    CODE
    ""
)
